foo-conceptname.html: fix a couple of typos

--- a/foo-conceptname.html
+++ b/foo-conceptname.html
@@ -37,7 +37,7 @@
     <p>This paper argues that it would be more natural for it to denote a function that takes two arguments of potentially different types, with those types satisfying the concept <code>ConceptName</code>. That is, it should be a shorthand for:
     <code>
     
-    template &lt;ConceptName __C1, ConceptName, __C2&gt;
+    template &lt;ConceptName __C1, ConceptName __C2&gt;
     R foo(__C1 a, __C2 b);
     </code>
     </p>
@@ -122,7 +122,7 @@
      <li><a href="https://groups.google.com/a/isocpp.org/forum/#!topic/std-proposals/_YpRok7LaEU/discussion">https://groups.google.com/a/isocpp.org/forum/#!topic/std-proposals/_YpRok7LaEU/discussion</a></li>
      <li><a href="https://www.reddit.com/r/cpp/comments/53i9a2/conceptlite_short_notation_problem/">https://www.reddit.com/r/cpp/comments/53i9a2/conceptlite_short_notation_problem/</a></li>
      <li><a href="http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2014/n3878.pdf">http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2014/n3878.pdf</a></li>
-     <li><a href="https://groups.google.com/a/isocpp.org/forum/#!topic/concepts/cdX4X0ngJqc/discussion">http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2016/n4569.pdf</a></li>
+     <li><a href="https://groups.google.com/a/isocpp.org/forum/#!topic/concepts/cdX4X0ngJqc/discussion">https://groups.google.com/a/isocpp.org/forum/#!topic/concepts/cdX4X0ngJqc/discussion</a></li>
     </ol>
   </body>
 </html>
