foo-conceptname.html: add revision history

--- a/foo-conceptname.html
+++ b/foo-conceptname.html
@@ -41,6 +41,20 @@
     R foo(__C1 a, __C2 b);
     </code>
     </p>
+    <h3>Revision History</h3>
+    <ul>
+      <li><strong>R1</strong>
+        <ul>
+          <li>New sections under "Arguments": "Variadic templates" and "Perfect forwarding"</li>
+          <li>New section under "Counter-arguments": "Interaction with definition checking"</li>
+        </ul>
+      </li>
+      <li><strong>R0</strong>
+        <ul>
+          <li>Initial draft</li>
+        </ul>
+      </li>
+    </ul>
     <h3>Arguments</h3>
     <h4>Follows from first principles</h4>
     <p>Once a developer has learned the basic language rule in Concepts that <code> ConceptName var </code> means that the variable <code>var</code> must have some type that models the concept <code>ConceptName</code>, the meaning of <code> ConceptName a, ConceptName b </code> should be obvious: that <code>a</code> and <code>b</code> model <code>ConceptName</code> &mdash; no more, no less.</p>
