foo-conceptname.html: make a slight clarification to the return type section

--- a/foo-conceptname.html
+++ b/foo-conceptname.html
@@ -182,7 +182,7 @@
     template &lt;ConceptName C&gt;
     C foo(C arg);
     </code></p>
-    <p>Alternatively, one can envision an extension to N3878 similar to the one mentioned above:
+    <p>Alternatively, using the syntax proposed in N3878:
     <code>
     
     auto foo(ConceptName{C} arg) -> C;
